lesson 6 required task show message

--- a/lesson_6/fcs/styles.css
+++ b/lesson_6/fcs/styles.css
@@ -19,13 +19,12 @@
     margin-bottom: 40px;
 }
 
-.form-wrapper .error-message{
+.form-wrapper .message{
     position: absolute;
     top: 15%;
     left: 0;
     display: none;
     padding: 10px 30px;
-    color: red;
 }
 
 #ticketForm div{
